--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 android {
     namespace 'com.teamb.bucwith'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.teamb.bucwith"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -29,7 +29,9 @@ android {
 }
 
 dependencies {
-
+    implementation "com.kakao.sdk:v2-all:2.12.0"
+    implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
+    implementation 'androidx.core:core-splashscreen:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
