--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,22 +4,39 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
+
+    <queries>
+        <package android:name="com.kakao.talk" />
+    </queries>
 
     <application
+        android:hardwareAccelerated="true"
         android:allowBackup="true"
-        android:icon="@drawable/bucwith"
-        android:roundIcon="@drawable/bucwith"
-        android:networkSecurityConfig="@xml/network_security_config"
+        android:icon="@drawable/ic_launcher_foreground"
+        android:roundIcon="@drawable/ic_launcher_foreground"
         android:label="BucWith"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-    <activity android:name=".MainActivity">
-    </activity>
-    <activity android:name=".SplashActivity"
+    <activity android:name=".MainActivity"
         android:exported="true">
+
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        <intent-filter>
+
+            <!-- 커스텀 URL 스킴 넣어주고 -->
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+
+            <data android:host="kakaolink"
+                android:scheme="kakao1096404f913d86991f57b2ae5740ca8d" />
+            <!-- 끝 -->
         </intent-filter>
     </activity>
 
